--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -76,7 +76,7 @@
 }
 .ncpi .pi-list-single-button-content .pi-select .pi-action-content .pi-dropdown-content {
   top: 36px;
-  left: -20px;
+  left: 3px;
   text-align: left;
 }
 .ncpi .pi-list-single-button-content button {
@@ -202,7 +202,8 @@
   color: #A0AEC0;
   border-bottom: 1px solid #E2E8F0;
   width: 100%;
-  padding: 12px 16px 12px 0;
+  padding: 12px 16px;
+  text-align: left;
 }
 .ncpi .pi-tag-content ul .pi-dropdown-content button:hover {
   color: #4C6FFF;
@@ -213,7 +214,7 @@
 }
 .ncpi .pi-tag-content ul .pi-dropdown-content a {
   color: #4A5568;
-  font-size: 14px;
+  font-size: 12px !important;
 }
 .ncpi .pi-tab-buttons-group {
   border: 1px solid #dddddda8;
@@ -285,9 +286,6 @@
 .ncpi .pi-small-button-group .pi-buttons-right .pi-t-1 {
   position: relative;
   top: -1px;
-}
-.ncpi .pi-small-button-group-two svg {
-  vertical-align: middle;
 }
 .ncpi .pi-small-button-group-two h3 {
   margin-top: 18px;
