--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -73,6 +73,8 @@
 .ncpi .pi-list-single-button-content .pi-select .pi-action-content .pi-btn svg {
   margin-right: 0;
   margin-left: 20px;
+  position: relative;
+  top: 6px;
 }
 .ncpi .pi-list-single-button-content .pi-select .pi-action-content .pi-dropdown-content {
   top: 36px;
