--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1281,9 +1281,11 @@ html {
   margin: auto;
   padding: 15px 55px;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 992px) {
   .ncpi .pi-width-content {
-    padding: 0px;
+    display: flex;
+    padding: 0;
+    justify-content: space-between;
   }
 }
 .ncpi .pi-top-menu-content {
@@ -1298,10 +1300,10 @@ html {
     padding: 15px;
     position: static;
     border-radius: 5px;
+    width: auto;
   }
 }
 .ncpi .pi-top-menu-content .pi-avater {
-  float: right;
   margin-top: 3px;
 }
 .ncpi .pi-avater {
@@ -1334,6 +1336,11 @@ html {
   scroll-behavior: smooth;
   height: 100vh;
 }
+@media screen and (max-width: 992px) {
+  .ncpi .pi-right-content {
+    padding: 0px;
+  }
+}
 .ncpi .pi-right-content .pi-page-title {
   margin-bottom: 25px;
   margin-top: 0;
@@ -1361,26 +1368,6 @@ html {
     padding: 30px 0;
   }
 }
-@media screen and (max-width: 992px) {
-  .ncpi .pi-right-content {
-    padding: 30px;
-    padding-top: 50px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .ncpi .pi-right-content {
-    padding: 45px 30px;
-  }
-}
-@media screen and (max-width: 550px) {
-  .ncpi .pi-right-content {
-    padding: 45px 15px !important;
-    overflow-x: hidden;
-  }
-}
-.ncpi .pi-icon-color {
-  fill: var(--text-color-white);
-}
 .ncpi .pi-empty-content {
   padding: 200px 0 150px;
   margin-bottom: 225px;
@@ -1406,13 +1393,11 @@ html {
   margin-right: 0 !important;
 }
 .ncpi .pi-action-btn {
-  height: 37px;
-  padding: 5px 5px;
+  padding: 2px;
   background-color: #fff;
   display: inline-block;
   cursor: pointer;
-  position: relative;
-  top: 7px;
+  top: 5px;
   border-radius: 5px;
   margin-left: 5px;
   border: 1px solid #dddddda8;
@@ -1561,6 +1546,9 @@ html {
 .ncpi .pi-punnel ul li span {
   float: right;
 }
+.ncpi .pi-search-box {
+  position: relative;
+}
 .ncpi .pi-search-box .pi-search-input {
   color: #1a202c;
   font-size: 14px;
@@ -1573,14 +1561,11 @@ html {
   background: transparent;
   width: 330px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 550px) {
   .ncpi .pi-search-box .pi-search-input {
-    width: 260px;
+    width: 220px;
     font-size: 12px;
   }
-}
-.ncpi .pi-search-box {
-  position: relative;
 }
 .ncpi .pi-search-box svg {
   position: absolute;
@@ -1799,13 +1784,12 @@ html {
 }
 .ncpi .pi-pagination-content-two .pi-pagination {
   margin-top: 25px;
-  margin-right: 0px;
+  margin-right: 30px;
 }
 .ncpi .pi-pagination {
   display: inline-flex;
   float: right;
   margin-top: 50px;
-  margin-right: -30px;
 }
 @media screen and (max-width: 450px) {
   .ncpi .pi-pagination {
@@ -1815,6 +1799,9 @@ html {
 .ncpi .pi-pagination .pi-disabled a {
   cursor: not-allowed;
   color: #4a5568;
+}
+.ncpi .pi-pagination .pi-disabled a svg path {
+  stroke: #E2E8F0 !important;
 }
 .ncpi .pi-pagination .pi-next a,
 .ncpi .pi-pagination .pi-previous a {
@@ -1894,6 +1881,11 @@ html {
   margin-right: 30px;
   margin-left: auto;
   position: relative;
+}
+@media screen and (max-width: 992px) {
+  .ncpi .pi-top-menu-content .pi-dropdown {
+    margin-right: 0px;
+  }
 }
 .ncpi .pi-top-menu-content .pi-dropdown img {
   margin-right: 10px;
@@ -2681,7 +2673,7 @@ html {
 }
 .ncpi .pi-accordion-wrapper h3 {
   font-weight: 600;
-  padding: 12px 15px;
+  padding: 10px 15px;
   margin: 0;
 }
 .ncpi .pi-accordion-wrapper p,
@@ -3647,6 +3639,9 @@ html {
   position: relative;
   top: -2px;
 }
+.ncpi .pi-mr-m-30 {
+  margin-right: -30px;
+}
 .ncpi .pi-mt-4 {
   position: relative !important;
   top: 4px !important;
@@ -4230,6 +4225,7 @@ select {
   overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100vh;
+  padding-bottom: 50px;
 }
 .ncpi .pi-left-sidebar .pi-logo-content {
   padding: 16px 30px;
@@ -4310,7 +4306,7 @@ select {
 .ncpi .pi-menubar-icon {
   display: none;
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 992px) {
   .ncpi .pi-left-sidebar {
     position: fixed;
     overflow-y: visible;
@@ -4320,19 +4316,19 @@ select {
     left: -220px;
     transition: all 0.3s ease-out;
     width: 220px;
+    border-right: 1px solid rgba(221, 221, 221, 0.6588235294);
   }
   .ncpi .pi-left-sidebar .pi-logo-content {
     width: 220px;
   }
   .ncpi .pi-menubar-icon {
-    position: absolute;
-    top: 12px;
-    left: 250px;
     display: block;
     cursor: pointer;
     font-size: 15px;
+    margin-top: 10px;
+    margin-right: 15px;
   }
-  .ncpi .pi-menu-left {
+  .ncpi .pi-menu-open {
     left: 0 !important;
   }
   .ncpi .pi-left-sidebar.pi-menu-left .pi-menubar-icon {
