--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -645,3 +645,10 @@
 .ncpi input:checked+section.pi-accordion-table .pi-accordion-title span svg {
   transform: rotate(0deg);
 }
+
+
+
+
+.wp-admin .pi-search-form ul li {
+  padding: 3px 5px !important;
+}
