--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -5202,3 +5202,8 @@ select {
   right: 20px;
   background-color: lightblue;
 }
+
+
+.ncpi .pi-modal-style-two .pi-modal-footer {
+  padding: 0 30px 0px;
+}
