--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1457,8 +1457,9 @@ html {
 .ncpi .pi-width-content {
   max-width: 1280px;
   margin: auto;
-  padding: 15px 55px;
+  padding: 15px 70px;
   display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 992px) {
@@ -1470,7 +1471,7 @@ html {
 
 .ncpi .pi-top-menu-content {
   position: fixed;
-  width: calc(100vw - 230px);
+  width: calc(100vw - 255px);
   z-index: 15;
   background-color: #fff;
   box-shadow: 0px 2px rgba(0, 0, 0, 0.01);
@@ -1489,11 +1490,6 @@ html {
   .ncpi .pi-top-menu-content {
     padding: 10px 15px;
   }
-}
-
-.ncpi .pi-top-menu-content .pi-avater {
-  margin-top: 3px;
-  margin-left: auto;
 }
 
 @media screen and (max-width: 420px) {
@@ -2192,8 +2188,6 @@ html {
 }
 
 .ncpi .pi-top-menu-content .pi-dropdown {
-  margin-right: 30px;
-  margin-left: auto;
   position: relative;
 }
 
@@ -4578,6 +4572,7 @@ body {
   border: none;
   font-size: 14px;
   display: inline-flex;
+  align-items: center;
 }
 
 .ncpi .pi-btn svg {
