update some issues

--- a/src/admin/js/react/components/invoice/single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/single/style.scoped.scss
@@ -313,26 +313,19 @@
   color: #718096;
   font-size: 12px;
 }
-.ncpi .pi-inv-sections .pi-group-input .pi-field-input {
+.ncpi .pi-inv-sections .pi-group-input .pi-field {
   width: 50%;
 }
-.ncpi .pi-inv-sections .pi-group-input .pi-field-input .pi-close-icon {
-  position: absolute;
-  right: 0px;
-  top: 5%;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-.ncpi .pi-inv-sections .pi-group-input .pi-field-input input {
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-.ncpi .pi-inv-sections .pi-group-input .pi-field-label .pi-close-icon {
+.ncpi .pi-inv-sections .pi-group-input .pi-field .pi-close-icon {
   position: absolute;
   right: 0px;
   top: 0%;
   padding: 5px 10px;
   cursor: pointer;
+}
+.ncpi .pi-inv-sections .pi-group-input .pi-field input {
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 .ncpi .pi-inv-sections .pi-group-input input::-moz-placeholder {
   color: #2D3748 !important;
