--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -228,7 +228,6 @@
 .ncpi .pi-tab-buttons-group .pi-activity-field input {
   font-size: 12px;
   color: #718096;
-  margin-bottom: 20px;
   margin-top: 0;
   border: none;
   padding: 7px 0;
@@ -251,7 +250,7 @@
   background: transparent;
   border: 1px solid;
   border-color: #CBD5E0;
-  padding: 5px 6px;
+  padding: 5px 6px 3px;
   border-radius: 5px;
   margin-right: 5px;
   cursor: pointer;
@@ -262,9 +261,6 @@
   text-align: left;
   top: 45px;
   left: -70px;
-}
-.ncpi .pi-tab-buttons-group .pi-tab-buttons .pi-dropdown-content svg {
-  top: 4px !important;
 }
 .ncpi .pi-small-button-group .pi-btn-small {
   color: #718096 !important;
