--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -995,13 +995,13 @@ html {
   padding: 17px 0;
 }
 .ncpi .pi-accordion-table-list ul {
-  display: grid;
+  display: flex;
   margin: 0;
   border: 1px solid #dddddda8;
   padding: 20px 10px 20px 0px;
   width: 100%;
   border-radius: 5px;
-  grid-template-columns: auto auto auto auto auto;
+  justify-content: space-between;
 }
 .ncpi .pi-accordion-table-list ul li:first-child {
   display: flex;
@@ -1526,7 +1526,7 @@ html {
 }
 .ncpi .pi-punnel {
   background: #fff;
-  padding: 40px 30px;
+  padding: 10px 20px;
   border-radius: 10px;
 }
 .ncpi .pi-punnel ul {
@@ -1535,10 +1535,10 @@ html {
 .ncpi .pi-punnel ul li:last-child {
   text-align: center;
   background: #345bde;
-  width: 95px;
+  width: 80px;
   border-radius: 50%;
-  height: 95px;
-  padding: 27px 10px;
+  height: 80px;
+  padding: 19px 5px;
 }
 .ncpi .pi-punnel ul li:last-child span {
   display: block;
@@ -1546,7 +1546,7 @@ html {
   font-size: 20px;
 }
 .ncpi .pi-punnel ul li {
-  padding: 23px 25px;
+  padding: 17px 25px;
   border-radius: 50px;
   color: #fff;
   font-size: 14px;
@@ -1555,6 +1555,10 @@ html {
 }
 .ncpi .pi-punnel ul li span {
   float: right;
+}
+.ncpi .pi-punnel p {
+  color: #718096;
+  font-weight: 500;
 }
 .ncpi .pi-search-box {
   position: relative;
@@ -1931,9 +1935,7 @@ html {
   }
 }
 .ncpi .pi-dropdown-content svg {
-  margin-right: 15px;
-  position: relative;
-  top: 2px;
+  margin-right: 10px;
 }
 .ncpi .pi-dropdown-content .pi-search-field {
   padding: 10px;
@@ -1960,7 +1962,8 @@ html {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
+  display: flex;
+  align-items: center;
 }
 .ncpi .pi-show {
   display: block;
@@ -1973,7 +1976,6 @@ html {
   border: 1px solid #CBD5E0;
   border-radius: 5px;
   padding: 13px 40px 13px 15px !important;
-  padding: 8px;
   -webkit-appearance: none;
   -moz-appearance: none;
   background: transparent;
@@ -1982,6 +1984,32 @@ html {
   background-position-x: 87% !important;
   background-position-y: 8px;
   outline: none;
+}
+
+.pi-select-style-two {
+  font-size: 14px !important;
+  color: #718096 !important;
+  border: 1px solid #CBD5E0;
+  border-radius: 4px;
+  padding: 6px 35px 6px 10px !important;
+  -webkit-appearance: none;
+  background-position-y: 2px;
+  background-position-x: 95% !important;
+}
+
+.pi-summery {
+  padding: 15px 20px;
+  border-radius: 8px;
+}
+.pi-summery ul li {
+  font-size: 14px;
+  color: #718096;
+  padding: 7px;
+}
+.pi-summery ul li b {
+  float: right;
+  color: #2D3748;
+  margin-right: 30%;
 }
 
 .wp-admin .pi-search-form ul li {
@@ -2652,7 +2680,6 @@ html {
   border-radius: 10px;
   border: 1px solid #dddddda8;
   margin-bottom: 10px;
-  z-index: 9;
   position: relative;
 }
 .ncpi .pi-accordion-wrapper > ul > li i {
@@ -3671,6 +3698,9 @@ html {
 }
 .ncpi .pi-border-0 {
   border: 0 !important;
+}
+.ncpi .pi-border-gray {
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
 }
 .ncpi .pi-gradient {
   background: linear-gradient(to bottom, #ffffff6b 0%, #00000004 100%);
