working with setting remider

--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -262,6 +262,9 @@
   top: 45px;
   left: -70px;
 }
+.ncpi .pi-tab-buttons-group .pi-tab-buttons .pi-dropdown-content img {
+  margin-right: 10px;
+}
 .ncpi .pi-small-button-group .pi-btn-small {
   color: #718096 !important;
   font-weight: 500;
@@ -398,7 +401,7 @@
 }
 .ncpi .pi-avatar-content .pi-avatar-text h5 {
   line-height: 140%;
-  color: #2D3748;
+  color: #4A5568;
   font-weight: 500;
 }
 .ncpi .pi-avatar-content .pi-avatar-text p {
