--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1043,9 +1043,6 @@ html {
   text-align: center;
   box-shadow: 0px 4.95074px 6.60099px rgba(0, 0, 0, 0.07);
 }
-.ncpi .pi-accordion-table-list ul li .pi-task-type svg path {
-  color: #A0AE #fff;
-}
 .ncpi .pi-accordion-table-list ul li .pi-task-type-text p {
   font-size: 10px;
   color: #a5b0c1;
@@ -1056,9 +1053,20 @@ html {
   top: 2px;
   margin-right: 5px;
 }
+.ncpi .pi-accordion-table-list ul li .pi-task-btn {
+  position: relative;
+  top: -3px;
+  padding: 3px 0px 0px;
+}
+.ncpi .pi-accordion-table-list ul li .pi-task-btn svg {
+  width: 15px !important;
+}
+.ncpi .pi-accordion-table-list ul li .pi-dropdown-content {
+  top: 30px;
+}
 .ncpi .pi-accordion-table-list .pi-dropdown-content {
   text-align: left;
-  left: -30px;
+  left: -60px;
 }
 .ncpi .pi-info-table-content {
   margin-top: 20px;
@@ -1293,7 +1301,7 @@ html {
 .ncpi .pi-top-menu-content {
   position: fixed;
   width: calc(100vw - 255px);
-  z-index: 15;
+  z-index: 25;
   background-color: #fff;
   box-shadow: 0px 2px rgba(0, 0, 0, 0.01);
 }
@@ -2749,18 +2757,18 @@ html {
   color: #4A5568;
   margin-left: -15px;
 }
-.ncpi .pi-accordion-wrapper .pi-switch-big {
+.ncpi .pi-accordion-wrapper .pi-field-switch-big {
   width: 45px;
   height: 22px;
   top: 4px;
   left: 20px;
 }
-.ncpi .pi-accordion-wrapper .pi-switch-big .pi-slider:before {
+.ncpi .pi-accordion-wrapper .pi-field-switch-big .pi-slider:before {
   height: 18px;
   width: 18px;
   left: 3px;
 }
-.ncpi .pi-accordion-wrapper .pi-switch-big input:checked + .pi-slider:before {
+.ncpi .pi-accordion-wrapper .pi-field-switch-big input:checked + .pi-slider:before {
   transform: translateX(21px);
 }
 .ncpi .pi-edit span {
@@ -3171,14 +3179,12 @@ html {
   margin-left: -2px;
 }
 
-.pi-switch-style-two {
+.pi-field-switch-style-two {
   display: flex;
   margin-top: 15px;
 }
-.pi-switch-style-two .pi-copy {
+.pi-field-switch-style-two .pi-copy {
   margin-right: 20px;
-  font-size: 14px;
-  color: #718096;
   position: relative;
   top: -4px;
 }
@@ -3212,6 +3218,9 @@ html {
   margin-left: 10px;
   cursor: pointer;
 }
+.ncpi .pi-search-btn .pi-search-form ul li:last-child svg {
+  top: 7px;
+}
 .ncpi .pi-search-btn .pi-search-form ul li {
   padding: 6px 5px;
   padding-left: 20px;
@@ -3232,6 +3241,9 @@ html {
   font-weight: 500;
   color: #4A5568;
   outline: none;
+  background: transparent;
+  -webkit-appearance: auto;
+  padding: 0px 3px 0 10px;
 }
 @media screen and (max-width: 820px) {
   .ncpi .pi-search-btn .pi-search-form ul li select {
@@ -3509,24 +3521,24 @@ html {
 .ncpi .pi-timeline-box-two ul li::after {
   top: 4px;
 }
-.ncpi .pi-switch-content {
+.ncpi .pi-field-switch-content {
   text-align: right;
-  z-index: 9;
+  z-index: 20;
   position: relative;
 }
-.ncpi .pi-switch-content .pi-primary {
+.ncpi .pi-field-switch-content .pi-primary {
   font-size: 10px;
   position: relative;
   top: -4px;
   margin-left: 5px;
 }
-.ncpi .pi-switch {
+.ncpi .pi-field-switch {
   position: relative;
   display: inline-block;
   width: 30px;
   height: 15px;
 }
-.ncpi .pi-switch input {
+.ncpi .pi-field-switch input {
   opacity: 0;
   width: 0;
   height: 0;
